--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-dist": "^1.12.1",
     "materialize-css": "^0.100.2",
+    "slick-carousel": "^1.8.1",
     "snapsvg": "^0.5.1"
   },
   "devDependencies": {
